[project]
name = "pursue-modal"
version = "0.1.0"
description = "Serverless satellite-imagery pipeline for pursue.report"
requires-python = ">=3.11"
dependencies = [
    "modal>=0.64",
    "boto3>=1.34",
    "requests>=2.31",
    "Pillow>=10.0",
    "pystac-client>=0.7",
    "PyGithub>=2.1",
]

[tool.modal]
# Pin to a specific image so deploys are reproducible.
python_version = "3.11"
